<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.AdminMenuFragment"
    android:background="@drawable/background_admin">
    

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginBottom="20dp">

                <ImageView
                    android:id="@+id/btnBack"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:clickable="true"
                    android:src="@drawable/back_icon"/>

                <TextView
                    android:id="@+id/pageHead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/outfit_regular"
                    android:text="@string/menu"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:letterSpacing="0.2"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="130dp"/>

            </LinearLayout>



            <ListView
                android:id="@+id/menuListView"
                android:layout_width="match_parent"
                android:layout_height="495dp"
                android:background="@drawable/round_white_button"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                <Button
                    android:id="@+id/btnEdit"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_dark_cream_button"
                    android:fontFamily="@font/outfit_light"
                    android:letterSpacing="0.15"
                    android:text="@string/edit"
                    android:textColor="@color/white"
                    android:layout_marginLeft="10dp"/>

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_dark_cream_button"
                    android:fontFamily="@font/outfit_light"
                    android:letterSpacing="0.15"
                    android:text="@string/add"
                    android:textColor="@color/white"
                    android:layout_marginStart="30dp"/>

                <Button
                    android:id="@+id/btnDelete"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_dark_cream_button"
                    android:fontFamily="@font/outfit_light"
                    android:letterSpacing="0.15"
                    android:text="@string/delete"
                    android:textColor="@color/white"
                    android:layout_marginLeft="30dp"
                    android:layout_marginBottom="1dp"/>

            </LinearLayout>



        </LinearLayout>
    </ScrollView>

</FrameLayout>