<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.EditDrinkActivity"
    android:background="@drawable/background">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:context=".EditDrinkActivity">
        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:clickable="true"
            android:src="@drawable/back_icon"
            android:layout_marginTop="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.033"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.033" />


        <TextView
            android:id="@+id/editTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:letterSpacing="0.15"
            android:fontFamily="@font/outfit_regular"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="Title"
            android:textAlignment="center"
            android:textSize="23sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTitleTextView"
            android:layout_marginTop="19dp"
            android:background="@drawable/round_white_button"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <ImageView
                android:id="@+id/btnImageUpload"
                android:layout_width="280dp"
                android:layout_height="200dp"
                app:srcCompat="@drawable/photo_placeholder" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editTitleTextView"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:text="Name:"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/editNameEditText"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editTitleTextView"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/outfit_light"
                    android:hint="Name" />


            </LinearLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/outfit_regular"
                android:text="Description:"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/editDescriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/outfit_light"
                android:hint="Description"
                android:inputType="textMultiLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:textSize="20dp">

                <TextView
                    android:id="@+id/textPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/outfit_regular"
                    android:text="Price:"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editPriceEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:fontFamily="@font/outfit_regular"
                    android:hint="£"
                    android:inputType="numberDecimal" />


                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:fontFamily="@font/outfit_regular"
                    android:text="Stock:"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editQuantityEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="5dp"
                    android:layout_toEndOf="@+id/textView5"
                    android:fontFamily="@font/outfit_regular"
                    android:hint="qty"
                    android:inputType="number" />

            </LinearLayout>
            <TextView
                android:id="@+id/errorTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/outfit_regular"
                android:text=""
                android:textSize="20sp" />

            <Button
                android:id="@+id/createButton"
                android:layout_width="150dp"
                android:layout_height="61dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_cream_button"
                android:fontFamily="@font/outfit_regular"
                android:letterSpacing="0.2"
                android:text="Save" />


        </LinearLayout>



    </RelativeLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>