...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AdminHomeActivity"
    android:background="@drawable/background_admin">

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="228dp"
        android:layout_height="93dp"
        android:fontFamily="@font/outfit_light"
        android:letterSpacing="0.09"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
...
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <Button
        android:id="@+id/viewMenu"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="319dp"
        android:layout_height="68dp"
        android:background="@drawable/round_white_button"
        android:drawableLeft="@drawable/menu_icon"
        android:drawablePadding="10dp"
...
